Fix #394: Fix some problems related to the new time range and visible tracks filtering. Update the function to trigger time update on given time intervals.

--- a/style/annotations/loop_function.less
+++ b/style/annotations/loop_function.less
@@ -65,6 +65,11 @@ div#loop {
 
     .slider {
         margin-top: -2px;
+        width: 40% !important;
+    }
+
+    #slider {
+        display: none;
     }
 
     #loop-length {
